--- a/Credit_Card_Fraud_basic_xgboost.ipynb
+++ b/Credit_Card_Fraud_basic_xgboost.ipynb
@@ -6,7 +6,7 @@
       "name": "Credit_Card_Fraud_basic_xgboost.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXNT4zmZ4xXGqwA8mvIDR/",
+      "authorship_tag": "ABX9TyPPqbjg7lDFODEvZfE0hw2o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mohitkhannanu/udemy-tf-course/blob/master/Credit_Card_Fraud_basic_xgboost.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mohitkhannanu/ml-01/blob/master/Credit_Card_Fraud_basic_xgboost.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,7 +43,7 @@
         "from sklearn.model_selection import GridSearchCV\n",
         "from datetime import datetime"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
         "# Loading Dataset\n",
         "data = pd.read_csv('https://storage.googleapis.com/download.tensorflow.org/data/creditcard.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
         "Y_cont = data.iloc[:,29]\n",
         "Y_class = data.iloc[:,30]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
         "#Y_class_hold_out.shape #(42721, 28)\n",
         "#Y_class_val.shape #(42722,)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,8 +122,9 @@
       },
       "source": [
         "# Parameter fine Tuning\n",
+        "starttime = datetime.now()\n",
         "model = XGBClassifier()\n",
-        "param_dist = {\"max_depth\": [2,3,6],\n",
+        "param_dist = {\"max_depth\": [2,3],\n",
         "              #\"min_child_weight\" : [1,3,6],\n",
         "              \"learning_rate\": [0.05, 0.1],\n",
         "              \"n_estimators\": [100,200,300]\n",
@@ -133,9 +134,10 @@
         "                                   verbose=10, n_jobs=-1)\n",
         "grid_search.fit(X_hold_out, Y_class_hold_out)\n",
         "\n",
-        "grid_search.best_estimator_"
+        "grid_search.best_estimator_\n",
+        "# print(datetime.now() - starttime) 0:08:33.140362"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +229,7 @@
         "accuracy = accuracy_score(Y_class_train, predictions)\n",
         "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +263,7 @@
         "def gini_normalized(actual, pred):\n",
         "    return gini(actual, pred) / gini(actual, actual)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +297,7 @@
         "# Hold Out------------------- 0.842\n",
         "# Val-------------------------0.783"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +323,7 @@
         "# Gini Drop Hold Out to Val\n",
         "(0.783/0.842-1)*100"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
