--- a/Credit_Card_Fraud_Bayesian_xgboost_2.ipynb
+++ b/Credit_Card_Fraud_Bayesian_xgboost_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Credit_Card_Fraud_Bayesian_xgboost_2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/VhjShPNStm8i03MYe74C",
+      "authorship_tag": "ABX9TyM/jzIuO8flGGdg+S9kzPRD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -185,7 +185,7 @@
         "#Extracting the best parameters\n",
         "params = xgb_bo.max['params']\n",
         "print(params)\n",
-        "print(datetime.now() - starttime) #1:26:40.362107"
+        "print(datetime.now() - starttime) #1:16:14.870691"
       ],
       "execution_count": 58,
       "outputs": [
@@ -232,7 +232,11 @@
       "metadata": {
         "id": "fbG26LPONzM6",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        },
+        "outputId": "5a80bc1f-cf0d-4547-dcb2-9975d7c72e0c"
       },
       "source": [
         "#test accuracy\n",
@@ -245,8 +249,27 @@
         "              silent=None, subsample=1, verbosity=1)\n",
         "model.fit(X_train, Y_class_train)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+              "              colsample_bynode=1, colsample_bytree=1, gamma=0,\n",
+              "              learning_rate=0.23168447688876614, max_delta_step=0, max_depth=10,\n",
+              "              min_child_weight=1, missing=None, n_estimators=194, n_jobs=1,\n",
+              "              nthread=None, objective='binary:logistic', random_state=0,\n",
+              "              reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+              "              silent=None, subsample=1, verbosity=1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -257,7 +280,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "081ab3d6-79aa-43cf-df55-aa18b7a541f9"
+        "outputId": "dd23fe7c-d765-4fb2-e6bc-8dea1a6f60ef"
       },
       "source": [
         "# make predictions for test data\n",
@@ -271,7 +294,7 @@
         "#accuracy = accuracy_score(Y_class_train, predictions)\n",
         "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
       ],
-      "execution_count": 55,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +328,7 @@
         "def gini_normalized(actual, pred):\n",
         "    return gini(actual, pred) / gini(actual, actual)"
       ],
-      "execution_count": 56,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -317,7 +340,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a1434b35-d4e3-448a-860b-de40884f337e"
+        "outputId": "41b4009c-4d46-42fc-a44b-3439ea344a6d"
       },
       "source": [
         "# Gini calculations\n",
@@ -341,14 +364,14 @@
         "# Val-------------------------0.783\n",
         "\n",
         "# Bayesian\n",
-        "# Val-------------------------0.805"
+        "# Val-------------------------0.793"
       ],
-      "execution_count": 57,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Gini: 0.402, Max. Gini: 0.499, Normalized Gini: 0.805\n"
+            "Gini: 0.396, Max. Gini: 0.499, Normalized Gini: 0.793\n"
           ],
           "name": "stdout"
         }
@@ -359,31 +382,14 @@
       "metadata": {
         "id": "itGMlsMGbECF",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "6317bf9b-880c-4626-d95e-1aca1eade535"
+        "colab": {}
       },
       "source": [
         "# Gini Drop Hold Out to Val\n",
         "(0.783/0.842-1)*100"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "-7.007125890736332"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 72
-        }
-      ]
+      "outputs": []
     }
   ]
 }
