--- a/Credit_Card_Fraud_Bayesian_xgboost.ipynb
+++ b/Credit_Card_Fraud_Bayesian_xgboost.ipynb
@@ -6,7 +6,7 @@
       "name": "Credit_Card_Fraud_Bayesian_xgboost.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMKrumKNjl8smvucjXV4yi8",
+      "authorship_tag": "ABX9TyPJGyWEGZYnEu6+Bef7EcXJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
         "import xgboost as xgb\n",
         "from sklearn.metrics import mean_squared_error"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
         "# Loading Dataset\n",
         "data = pd.read_csv('https://storage.googleapis.com/download.tensorflow.org/data/creditcard.csv')"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
         "Y_cont = data.iloc[:,29]\n",
         "Y_class = data.iloc[:,30]"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "#Y_class_hold_out.shape #(42721, 28)\n",
         "#Y_class_val.shape #(42722,)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
         "              silent=None, subsample=1, verbosity=1)\n",
         "model.fit(X_train, Y_class_train)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +281,7 @@
         "#accuracy = accuracy_score(Y_class_train, predictions)\n",
         "print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +315,7 @@
         "def gini_normalized(actual, pred):\n",
         "    return gini(actual, pred) / gini(actual, actual)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -351,10 +351,9 @@
         "# Val-------------------------0.783\n",
         "\n",
         "# Bayesian\n",
-        "# Val-------------------------0.783\n",
-        "0.805"
+        "# Val-------------------------0.805"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
